            -itemtype deleted from sidebar.php
            -footer.php: itemprop deleted
            -footer.php: nav element do not need role.
        - addstyling to html <b> element (mdn: represents a span of text stylistically different from normal text, without conveying any special importance or relevance.)
        
    commit #16.6.5
    17 June, 2017
        ==Accessibility ==
            -article footer contrast ration increased to meet wcag 'AAA'
            -attachment post type (iamge.php) to include alt text
            -attachment post type to display meta in footer in unordered list.
            -page and image navigation icons set in css
        ==typography==
            -sitemap font size reduced
            -attachement post type get better. 
        ==make it roboust ==
            -comments: itemprop deleted
    
    commit #16.6.6
        ==make it roboust ==
            -function manduca_display_entry_header
            -make the header responsive and same in all devices
            -this eliminates the disadvantages of relative positioning of content-date.
            
        ==accessibility==
            -image.php (attachment page): add id to descriptipn
            - sitemap: delet alternative text from image list
        ==bug==
            -delete itemprop from all files.
    
    commit #16.6.7
        Uploaded to repository as v 16.6
        27 June, 2016
        ==bug==
            - #secondary aria-labelledby crashed the JAWS and NVDA.
            - Oaron fixed it on previous two commits w/o number.
        
            
ver 16.7
    commit #16.7.1
        19 July, 2017
        -add manduca_before_header action hook
        -change dotted outline to ridge
        -sitemap rewritten:
            -alphabetic order,
            -no breakdown by categories,
            -media: only list
            -list of pdf files.
        -add edit link to excerpts too.
        -remove breadcroumb in case of attachment
        